# git-bob-plugin-example

./: README.md  requirements.txt  setup.cfg
.github/workflows/: git-bob.yml
src/my_custom_git_assistant/: __init__.py
