[metadata]
name = my_custom_git_assistant
version = 0.1.0
description = A custom git-bob extension example
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haesleinhuepf/git-bob-plugin-example
author = Robert Haase
author_email = robert.haase@uni-leipzig.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/git-bob-plugin-example/issues
    Documentation = https://github.com/haesleinhuepf/git-bob-plugin-example#README.md
    Source Code = https://github.com/haesleinhuepf/git-bob-plugin-example
    User Support = https://github.com/haesleinhuepf/git-bob-plugin-example/issues

[options]
packages = find:
install_requires = file: requirements.txt
python_requires = >=3.9
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml

git_bob.prompt_handlers =
    my-custom-llm = my_custom_git_assistant:prompt_my_custom_llm

git_bob.triggers =
    answer = my_custom_git_assistant:answer_issue
